<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the Australian Footbal score keeper -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamTitleTextViewStyle"
                    android:text="@string/team_a" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ScoreTextViewStyle"
                        android:gravity="start"
                        android:text="@string/goals"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/team_a_goal_score"
                        style="@style/ScoreTextViewStyle"
                        android:gravity="center"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        tools:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ScoreTextViewStyle"
                        android:gravity="start"
                        android:text="@string/behinds"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/team_a_behind_score"
                        style="@style/ScoreTextViewStyle"
                        android:gravity="center"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        tools:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ScoreTextViewStyle"
                        android:gravity="start"
                        android:text="@string/total"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/team_a_total_score"
                        style="@style/ScoreTextViewStyle"
                        android:gravity="center"
                        android:textSize="56sp"
                        android:textStyle="bold"
                        tools:text="0" />
                </LinearLayout>

                <Button
                    android:id="@+id/team_a_goal"
                    style="@style/KickButtonStyle"
                    android:text="@string/goal" />

                <Button
                    android:id="@+id/team_a_behind"
                    style="@style/KickButtonStyle"
                    android:text="@string/behind" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamTitleTextViewStyle"
                    android:text="@string/team_b" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ScoreTextViewStyle"
                        android:gravity="start"
                        android:text="@string/goals"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/team_b_goal_score"
                        style="@style/ScoreTextViewStyle"
                        android:gravity="center"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        tools:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ScoreTextViewStyle"
                        android:gravity="start"
                        android:text="@string/behinds"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/team_b_behind_score"
                        style="@style/ScoreTextViewStyle"
                        android:gravity="center"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        tools:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ScoreTextViewStyle"
                        android:gravity="start"
                        android:text="@string/total"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/team_b_total_score"
                        style="@style/ScoreTextViewStyle"
                        android:gravity="center"
                        android:textSize="56sp"
                        android:textStyle="bold"
                        tools:text="0" />
                </LinearLayout>

                <Button
                    android:id="@+id/team_b_goal"
                    style="@style/KickButtonStyle"
                    android:text="@string/goal" />

                <Button
                    android:id="@+id/team_b_behind"
                    style="@style/KickButtonStyle"
                    android:text="@string/behind" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reset"
            style="@style/ResetButtonStyle"
            android:text="@string/reset" />
    </LinearLayout>
</ScrollView>